aptitude corect and incorerct dispalyed

--- a/templates/Highschool/Hss/ar12.html
+++ b/templates/Highschool/Hss/ar12.html
@@ -69,18 +69,18 @@
                 <p>In this test, there are 30 questions. You will se rows of designs or figures like those given below in the example.
                     Each row consists of four figures called Problem Figures followed by Answer Figures which have four options-A, B, C and D. The Problem Figures follow a certain sequence. You need to find out which one of the Answer Figures would be the next in the sequence of Problem Figures.</p>
                 <li>
-                    <p>1.<h4>Problem Figure</h4><br> <img src="ta1.png"></p>
+                    <p>1.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta1.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta1o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta1o.png') }}">
                     <label><input type="radio" name="q1" value="a"> a) A</label>
                     <label><input type="radio" name="q1" value="b"> b) B</label>
                     <label><input type="radio" name="q1" value="c"> c) C</label>
                     <label><input type="radio" name="q1" value="d"> d) D</label>
                 </li>
                 <li>
-                    <p>2. <h4>Problem Figure</h4><br> <img src="ta2.png"></p>
+                    <p>2. <h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta2.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta2o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta2o.png') }}">
                     <label><input type="radio" name="q2" value="a"> a) A</label>
                     <label><input type="radio" name="q2" value="b"> b) B</label>
                     <label><input type="radio" name="q2" value="c"> c) C</label>
@@ -88,9 +88,9 @@
                 </li>
 
                 <li>
-                    <p>3. <h4>Problem Figure</h4><br> <img src="ta3.png"></p>
+                    <p>3. <h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta3.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta3o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta3o.png') }}">
                     <label><input type="radio" name="q3" value="a"> a) A</label>
                     <label><input type="radio" name="q3" value="b"> b) B</label>
                     <label><input type="radio" name="q3" value="c"> c) C</label>
@@ -98,9 +98,9 @@
                 
                 </li>
                 <li>
-                    <p>4.<h4>Problem Figure</h4><br> <img src="ta4.png"></p>
+                    <p>4.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta4.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta4o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta4o.png') }}">
                     <label><input type="radio" name="q4" value="a"> a) A</label>
                     <label><input type="radio" name="q4" value="b"> b) B</label>
                     <label><input type="radio" name="q4" value="c"> c) C</label>
@@ -108,9 +108,9 @@
                    
                 </li>
                 <li>
-                    <p>5. <h4>Problem Figure</h4><br> <img src="ta5.png"></p>
+                    <p>5. <h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta5.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta5o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta5o.png') }}">
                     <label><input type="radio" name="q5" value="a"> a) A</label>
                     <label><input type="radio" name="q5" value="b"> b) B</label>
                     <label><input type="radio" name="q5" value="c"> c) C</label>
@@ -118,9 +118,9 @@
                     
                 </li>
                 <li>
-                    <p>6.<h4>Problem Figure</h4><br> <img src="ta6.png"></p>
+                    <p>6.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta6.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta6o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta6o.png') }}">
                     <label><input type="radio" name="q6" value="a"> a) A</label>
                     <label><input type="radio" name="q6" value="b"> b) B</label>
                     <label><input type="radio" name="q6" value="c"> c) C</label>
@@ -128,9 +128,9 @@
                     
                 </li>
                 <li>
-                    <p>7.<h4>Problem Figure</h4><br> <img src="ta7.png"></p>
+                    <p>7.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta7.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta7o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta7o.png') }}">
                     <label><input type="radio" name="q7" value="a"> a) A</label>
                     <label><input type="radio" name="q7" value="b"> b) B</label>
                     <label><input type="radio" name="q7" value="c"> c) C</label>
@@ -138,18 +138,18 @@
                   
                 </li>
                 <li>
-                    <p>8.<h4>Problem Figure</h4><br> <img src="ta8.png"></p>
+                    <p>8.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta8.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta8o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta8o.png') }}">
                     <label><input type="radio" name="q8" value="a"> a) A</label>
                     <label><input type="radio" name="q8" value="b"> b) B</label>
                     <label><input type="radio" name="q8" value="c"> c) C</label>
                     <label><input type="radio" name="q8" value="d"> d) D</label>
                 </li>
                 <li>
-                    <p>9.<h4>Problem Figure</h4><br> <img src="ta9.png"></p>
+                    <p>9.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta9.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta9o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta9o.png') }}">
                     <label><input type="radio" name="q9" value="a"> a) A</label>
                     <label><input type="radio" name="q9" value="b"> b) B</label>
                     <label><input type="radio" name="q9" value="c"> c) C</label>
@@ -157,9 +157,9 @@
                   
                 </li>
                 <li>
-                    <p>10<h4>Problem Figure</h4><br> <img src="ta10.png"></p>
+                    <p>10<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta10.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta10o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta10o.png') }}">
                     <label><input type="radio" name="q10" value="a"> a) A</label>
                     <label><input type="radio" name="q10" value="b"> b) B</label>
                     <label><input type="radio" name="q10" value="c"> c) C</label>
@@ -168,9 +168,9 @@
                 </li>
                  
                 <li>
-                    <p>11. <h4>Problem Figure</h4><br> <img src="ta11.png"></p>
+                    <p>11. <h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta11.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta11o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta11o.png') }}">
                     <label><input type="radio" name="q11" value="a"> a) A</label>
                     <label><input type="radio" name="q11" value="b"> b) B</label>
                     <label><input type="radio" name="q11" value="c"> c) C</label>
@@ -178,9 +178,9 @@
                    
                 </li>
                 <li>
-                    <p>12.<h4>Problem Figure</h4><br> <img src="ta12.png"></p>
+                    <p>12.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta12.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta12o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta12o.png') }}">
 
                     <label><input type="radio" name="q12" value="a"> a) A</label>
                     <label><input type="radio" name="q12" value="b"> b) B</label>
@@ -189,9 +189,9 @@
                    
                 </li>
                 <li>
-                    <p>13.<h4>Problem Figure</h4><br> <img src="ta13.png"></p>
+                    <p>13.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta13.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta13o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta13o.png') }}">
 
                     <label><input type="radio" name="q13" value="a"> a) A</label>
                     <label><input type="radio" name="q13" value="b"> b) B</label>
@@ -200,9 +200,9 @@
                     
                 </li>
                 <li>
-                    <p>14. <h4>Problem Figure</h4><br> <img src="ta14.png"></p>
+                    <p>14. <h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta14.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta14o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta14o.png') }}">
                     <label><input type="radio" name="q14" value="a"> a) A</label>
                     <label><input type="radio" name="q14" value="b"> b) B</label>
                     <label><input type="radio" name="q14" value="c"> c) C</label>
@@ -210,9 +210,9 @@
                  
                 </li>
                 <li>
-                    <p>15.<h4>Problem Figure</h4><br> <img src="ta15.png"></p>
+                    <p>15.<h4>Problem Figure</h4><br> <img src="{{ url_for('static', filename='img/Hss/ta15.png') }}"></p>
                     <h4>Answer Figure</h4>
-                    <img src="ta15o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/ta15o.png') }}">
 
                     <label><input type="radio" name="q15" value="a"> a) A</label>
                     <label><input type="radio" name="q15" value="b"> b) B</label>
@@ -222,7 +222,7 @@
                 </li>
                 <li>
                     <p>16. Which figure is the odd one out? </p>
-                    <img src="aq16.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq16.png') }}">
 
                     <label><input type="radio" name="q16" value="a"> a) A</label>
                     <label><input type="radio" name="q16" value="b"> b) B</label>
@@ -232,7 +232,7 @@
                 </li>
                 <li>
                     <p>17. Which figure is the odd one out? </p>
-                    <img src="aq17.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq17.png') }}">
 
                     <label><input type="radio" name="q17" value="a"> a) A</label>
                     <label><input type="radio" name="q17" value="b"> b) B</label>
@@ -242,7 +242,7 @@
                 </li>
                 <li>
                     <p>18. Which figure completes the grid?</p>
-                    <img src="aq18.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq18.png') }}">
 
                     <label><input type="radio" name="q18" value="a"> a) A</label>
                     <label><input type="radio" name="q18" value="b"> b) B</label>
@@ -252,7 +252,7 @@
                 </li>
                 <li>
                     <p>19. Which figure completes the grid? </p>
-                    <img src="aq19.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq19.png') }}">
 
                     <label><input type="radio" name="q19" value="a"> a) A</label>
                     <label><input type="radio" name="q19" value="b"> b) B</label>
@@ -262,7 +262,7 @@
                 </li>
                 <li>
                     <p>20. Which figure is next in the series? </p>
-                    <img src="aq20.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq20.png') }}">
 
                     <label><input type="radio" name="q20" value="a"> a) A</label>
                     <label><input type="radio" name="q20" value="b"> b) B</label>
@@ -272,7 +272,7 @@
                 </li>
                 <li>
                     <p>21. Which of the boxes comes next in the sequence? </p>
-                    <img src="aq21.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq21.png') }}">
 
                     <label><input type="radio" name="q21" value="a"> a) A</label>
                     <label><input type="radio" name="q21" value="b"> b) B</label>
@@ -282,7 +282,7 @@
                 </li>
                 <li>
                     <p>22. Which shape follows in the sequence? </p>
-                    <img src="aq22.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq22.png') }}">
 
                     <label><input type="radio" name="q22" value="a"> a) A</label>
                     <label><input type="radio" name="q22" value="b"> b) B</label>
@@ -292,7 +292,7 @@
                 </li>
                 <li>
                     <p>23. Which box follows the sequence? </p>
-                    <img src="aq23.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq23.png') }}">
 
                     <label><input type="radio" name="q23" value="a"> a) A</label>
                     <label><input type="radio" name="q23" value="b"> b) B</label>
@@ -302,7 +302,7 @@
                 </li>
                 <li>
                     <p>24. Which figure completes the sequence?</p>
-                    <img src="aq24.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq24.png') }}">
 
                     <label><input type="radio" name="q24" value="a"> a) A</label>
                     <label><input type="radio" name="q24" value="b"> b) B</label>
@@ -312,7 +312,7 @@
                 </li>
                 <li>
                     <p>25. Which figure completes the sequence? </p>
-                    <img src="aq25.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq25.png') }}">
 
                     <label><input type="radio" name="q25" value="a"> a) A</label>
                     <label><input type="radio" name="q25" value="b"> b) B</label>
@@ -320,8 +320,8 @@
                     <label><input type="radio" name="q25" value="d"> d) D</label>
 
                 </li>
-                <li>26. Which figure belongs in neither group? </p>
-                    <img src="aq26.png">
+                <li><p>26. Which figure belongs in neither group? </p>
+                    <img src="{{ url_for('static', filename='img/Hss/aq26.png') }}">
 
                     <label><input type="radio" name="q26" value="a"> a) A</label>
                     <label><input type="radio" name="q26" value="b"> b) B</label>
@@ -331,8 +331,8 @@
                 </li>
                 <li>
                     <p>27. Which figure completes the sequence? </p>
-                    <img src="aq27.png">
-                    <img src="aq27o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq27.png') }}">
+                    <img src="{{ url_for('static', filename='img/Hss/aq27o.png') }}">
 
                     <label><input type="radio" name="q27" value="a"> a) A</label>
                     <label><input type="radio" name="q27" value="b"> b) B</label>
@@ -342,8 +342,8 @@
                 </li>
                 <li>
                     <p>28. Which figure completes the sequence? </p>
-                    <img src="aq28.png">
-                    <img src="aq28o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq28.png') }}">
+                    <img src="{{ url_for('static', filename='img/Hss/aq28o.png') }}">
 
                     <label><input type="radio" name="q28" value="a"> a) A</label>
                     <label><input type="radio" name="q28" value="b"> b) B</label>
@@ -353,8 +353,8 @@
                 </li>
                 <li>
                     <p>29. Complete the sequence. </p>
-                    <img src="aq29.png">
-                    <img src="aq29o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/aq29.png') }}">
+                    <img src="{{ url_for('static', filename='img/Hss/aq29o.png') }}">
 
 
                     <label><input type="radio" name="q29" value="a"> a) A</label>
@@ -365,8 +365,8 @@
                 </li>
                 <li>
                     <p>30. Complete the sequence. </p>
-                    <img src="aq30.png">
-                    <img src="aq30o.png">
+                    <img src="{{ url_for('static', filename='img/Hss/a320.png') }}">
+                    <img src="{{ url_for('static', filename='img/Hss/aq30o.png') }}">
 
                     <label><input type="radio" name="q30" value="a"> a) A</label>
                     <label><input type="radio" name="q30" value="b"> b) B</label>
@@ -438,6 +438,14 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
+        
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
         document.getElementById("submit").addEventListener('click', function(e){
             // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -456,6 +464,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -472,7 +483,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-        
+            displayCorrectAnswers();
           
     })
 
