--- a/templates/Highschool/Hss/num12.html
+++ b/templates/Highschool/Hss/num12.html
@@ -118,21 +118,22 @@
                     <label><input type="radio" name="q4" value="d"> d) 13</label>
                 </li>
                 <li>
-                    <p> <img src="tn5.png" width="15%" height="15%"></p>
-                    <label><input type="radio" name="q5" value="a"> a) <img src="tn5oa.png" width="5%" height="5%"> </label>
-                    <label><input type="radio" name="q5" value="b"> b) <img src="tn5ob.png" width="5%" height="5%"> </label>
-                    <label><input type="radio" name="q5" value="c"> c) <img src="tn5oc.png" width="5%" height="5%"> </label>
-                    <label><input type="radio" name="q5" value="d"> d) <img src="tn5od.png" width="5%" height="5%"></label>
+                 
+                    <p> <img src="{{ url_for('static', filename='img/Hss/tn5.png') }}" width="15%" height="15%"></p>
+                    <label><input type="radio" name="q5" value="a"> a) <img src="{{ url_for('static', filename='img/Hss/tn5oa.png') }}" width="5%" height="5%"> </label>
+                    <label><input type="radio" name="q5" value="b"> b) <img src="{{ url_for('static', filename='img/Hss/tn5ob.png') }}" width="5%" height="5%"> </label>
+                    <label><input type="radio" name="q5" value="c"> c) <img src="{{ url_for('static', filename='img/Hss/tn5oc.png') }}" width="5%" height="5%"> </label>
+                    <label><input type="radio" name="q5" value="d"> d) <img src="{{ url_for('static', filename='img/Hss/tn5od.png') }}" width="5%" height="5%"></label>
                 </li>
                 <li>
-                    <p> <img src="tn6.png" width="15%" height="15%"></p>
+                    <p> <img src="{{ url_for('static', filename='img/Hss/tn6.png') }}" width="15%" height="15%"></p>
                     <label><input type="radio" name="q6" value="a"> a) 8 </label>
                     <label><input type="radio" name="q6" value="b"> b) 3 </label>
                     <label><input type="radio" name="q6" value="c"> c) 72 </label>
                     <label><input type="radio" name="q6" value="d"> d) 12</label>
                 </li>
                 <li>
-                    <p> <img src="tn7.png" width="15%" height="15%"></p>
+                    <p> <img src="{{ url_for('static', filename='img/Hss/tn7.png') }}" width="15%" height="15%"></p>
                     <label><input type="radio" name="q7" value="a"> a) 2.4 </label>
                     <label><input type="radio" name="q7" value="b"> b) 4.2</label>
                     <label><input type="radio" name="q7" value="c"> c) 0.24 </label>
@@ -147,10 +148,10 @@
                 </li>
                 <li>
                     <p>Which one of the following has value 1 ?</p>
-                    <label><input type="radio" name="q9" value="a"> a) <img src="tn9a.png" width="10%" height="10%"> </label>
-                    <label><input type="radio" name="q9" value="b"> b) <img src="tn9b.png" width="10%" height="10%"></label>
-                    <label><input type="radio" name="q9" value="c"> c) <img src="tn9c.png" width="10%" height="10%"></label>
-                    <label><input type="radio" name="q9" value="d"> d) <img src="tn9d.png" width="10%" height="10%"> </label>
+                    <label><input type="radio" name="q9" value="a"> a) <img src="{{ url_for('static', filename='img/Hss/tn9a.png') }}" width="10%" height="10%"> </label>
+                    <label><input type="radio" name="q9" value="b"> b) <img src="{{ url_for('static', filename='img/Hss/tn9b.png') }}" width="10%" height="10%"></label>
+                    <label><input type="radio" name="q9" value="c"> c) <img src="{{ url_for('static', filename='img/Hss/tn9c.png') }}" width="10%" height="10%"></label>
+                    <label><input type="radio" name="q9" value="d"> d) <img src="{{ url_for('static', filename='img/Hss/tn9d.png') }}" width="10%" height="10%"> </label>
                 </li>
                 <li>
                     <p> What is the next number in following number sequence?
@@ -161,7 +162,7 @@
                     <label><input type="radio" name="q10" value="d"> d) 200 </label>
                 </li>
                 <li>
-                    <p> <img src="tn11.png" width="15%" height="15%"></p>
+                    <p> <img src="{{ url_for('static', filename='img/Hss/tn11.png') }}" width="15%" height="15%"></p>
                     <label><input type="radio" name="q11" value="a"> a) 72 </label>
                     <label><input type="radio" name="q11" value="b"> b) 27 </label>
                     <label><input type="radio" name="q11" value="c"> c) 6 </label>
@@ -183,14 +184,14 @@
                 </li>
                 <li>
                     <p> What is the next number in following number sequence?
-                       <br><br> <img src="tn14.png" width="20%" height="20%">
+                       <br><br> <img src="{{ url_for('static', filename='img/Hss/tn14.png') }}" width="20%" height="20%">
                     </p>
                     <label><input type="radio" name="q14" value="a"> a) 5</label>
                     <label><input type="radio" name="q14" value="b"> b) <img src="tn14b.png" width="10%" height="10%"> </label>
                     <label><input type="radio" name="q14" value="c"> c) <img src="tn14c.png" width="10%" height="10%"> </label>
                     <label><input type="radio" name="q14" value="d"> d) 8 </label>
                 </li>
-                <li>If x = 10 then 3x<sup>2</sup> - x = ?</p>
+                <li><p>?If x = 10 then 3x<sup>2</sup> - x = ? </p>
                     <label><input type="radio" name="q15" value="a"> a) 50 </label>
                     <label><input type="radio" name="q15" value="b"> b) 200 </label>
                     <label><input type="radio" name="q15" value="c"> c) 270 </label>
@@ -273,7 +274,7 @@
                     <p> The pie chart given below shows the production of 6 different factories. The total production
                         of all these 6 factories is 1400. The production of a particular factory is shown as a percent
                         of total production of all these 6 factories.</p>
-                    <img id="n" src="n5.PNG" >
+                    <img id="n" src="{{ url_for('static', filename='img/Hss/n5.PNG') }}" >
                     <p>Which of the following statement correct?
                         <br>I. The central angle formed by sectors A and C together is 156.6°.<br>
                         II. The central angle formed by sector B, D and together F is 180°.
@@ -329,7 +330,7 @@
                 </li>
                 <li>
                     <p>Study the given graph and answer the question that follows.</p>
-                    <img id="n" src="n7.PNG">
+                    <img id ="n" src="{{ url_for('static', filename='img/Hss/n7.PNG') }}">
                     <p>The expenditure on Interest on Loans is by what percentage more than the expenditure on Taxes ?
                     </p>
                     <label><input type="radio" name="q27" value="a"> a) 30% </label>
@@ -341,7 +342,7 @@
                     <p>The line graph shows the production (in tonnes) and the sales (in tonnes) of a
                         company.<br><br>What percentage (approximately) of the total production of the company is the
                         total sales of the company in all the years together? (correct to 2 decimal places)</p>
-                    <img id="n" src="n8.PNG">
+                    <img id="n" src="{{ url_for('static', filename='img/Hss/n8.PNG') }}">
                     <label><input type="radio" name="q28" value="a"> a) 78.44</label>
                     <label><input type="radio" name="q28" value="b"> b) 72.55 </label>
                     <label><input type="radio" name="q28" value="c"> c) 68.12 </label>
@@ -427,6 +428,14 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
+        
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
         document.getElementById("submit").addEventListener('click', function(e){
             // Logic to calculate quiz results (count correct, incorrect, unattended)
             var totalQuestions = 30;
@@ -444,6 +453,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -460,7 +472,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-        
+            displayCorrectAnswers();
           
     }
         )
