--- a/templates/Highschool/ar10.html
+++ b/templates/Highschool/ar10.html
@@ -500,9 +500,18 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
-
-        document.getElementById("submit").addEventListener('click', function(e){
-            // Logic to calculate quiz results (count correct, incorrect, unattended)
+       
+        // Function to display correct answers for all questions
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
+        // Event listener for the "Show Results" button
+        document.getElementById("submit").addEventListener('click', function (e) {
+            // Calculate quiz results
             var totalQuestions = 30;
             var correctAnswers = 0;
             var unattendedQuestions = 0;
@@ -517,6 +526,8 @@
                     // Compare user's answer with correct answer
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
+                    } else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
                     }
                 } else {
                     // If no option is selected, question is unattended
@@ -534,8 +545,10 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-        
-        })
+
+            // Display correct answers
+            displayCorrectAnswers();
+        });
 
         function displayPieChart(correct, incorrect, unattended) {
             var ctx = document.getElementById('quizChart').getContext('2d');
@@ -612,17 +625,7 @@ function sendResults(){
         updateTimer();
 
 }
-// window.onbeforeunload = function () {
-//         return 'Your progress will be lost';
-//     };
 
-//     // Handle the case when the user chooses to leave the page
-//     window.addEventListener('unload', function () {
-//         // Call sendResults() function when user leaves the page
-//         sendResults();
-//     });
-
-// Start the timer when the page loads
 startTimer();
     </script>
 </body>
