--- a/templates/Highschool/proff/abstr.html
+++ b/templates/Highschool/proff/abstr.html
@@ -66,7 +66,7 @@
             <ol>
                 <li>
                     <p>1. Which of the following matches the relationship between the shapes in the image?</p>
-                    <img src="aq1.png">
+                    <img src="{{url_for('static', filename='img/proff/aq1.png')}}">
                     <label><input type="radio" name="q1" value="a"> a) A</label>
                     <label><input type="radio" name="q1" value="b"> b) B</label>
                     <label><input type="radio" name="q1" value="c"> c) C</label>
@@ -74,7 +74,7 @@
                 </li>
                 <li>
                     <p>2. Which Domino comes next in sequence?</p>
-                    <img src="aq2.png">
+                    <img src="{{url_for('static', filename='img/proff/aq2.png')}}">
                     <label><input type="radio" name="q2" value="a"> a) A</label>
                     <label><input type="radio" name="q2" value="b"> b) B</label>
                     <label><input type="radio" name="q2" value="c"> c) C</label>
@@ -83,7 +83,7 @@
 
                 <li>
                     <p>3. Which is the next logical image in the sequence ?</p>
-                    <img src="aq3.png">
+                    <img src="{{url_for('static', filename='img/proff/aq3.png')}}">
                     <label><input type="radio" name="q3" value="a"> a) A</label>
                     <label><input type="radio" name="q3" value="b"> b) B</label>
                     <label><input type="radio" name="q3" value="c"> c) C</label>
@@ -92,7 +92,7 @@
                 </li>
                 <li>
                     <p>4. Which is the next logical image in the sequence ?</p>
-                    <img src="aq4.png">
+                    <img src="{{url_for('static', filename='img/proff/aq4.png')}}">
                     <label><input type="radio" name="q4" value="a"> a) A</label>
                     <label><input type="radio" name="q4" value="b"> b) B</label>
                     <label><input type="radio" name="q4" value="c"> c) C</label>
@@ -101,7 +101,7 @@
                 </li>
                 <li>
                     <p>5. Which is the odd string of letters out ?</p>
-                    <img src="aq5.png">
+                    <img src="{{url_for('static', filename='img/proff/aq5.png')}}">
                     <label><input type="radio" name="q5" value="a"> a) A</label>
                     <label><input type="radio" name="q5" value="b"> b) B</label>
                     <label><input type="radio" name="q5" value="c"> c) C</label>
@@ -110,7 +110,7 @@
                 </li>
                 <li>
                     <p>6.Choose the image that completes the pattern (From left to right)</p>
-                    <img src="aq6.png">
+                    <img src="{{url_for('static', filename='img/proff/aq6.png')}}">
                     <label><input type="radio" name="q6" value="a"> a) A</label>
                     <label><input type="radio" name="q6" value="b"> b) B</label>
                     <label><input type="radio" name="q6" value="c"> c) C</label>
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                     <p>7.Choose the image that completes the pattern (From left to right)</p>
-                    <img src="aq7.png">
+                    <img src="{{url_for('static', filename='img/proff/aq7.png')}}">
                     <label><input type="radio" name="q7" value="a"> a) A</label>
                     <label><input type="radio" name="q7" value="b"> b) B</label>
                     <label><input type="radio" name="q7" value="c"> c) C</label>
@@ -128,7 +128,7 @@
                 </li>
                 <li>
                     <p>8.Complete the sequence. </p>
-                    <img src="aq8.png">
+                    <img src="{{url_for('static', filename='img/proff/aq8.png')}}">
                     <label><input type="radio" name="q8" value="a"> a) A</label>
                     <label><input type="radio" name="q8" value="b"> b) B</label>
                     <label><input type="radio" name="q8" value="c"> c) C</label>
@@ -136,7 +136,7 @@
                 </li>
                 <li>
                     <p>9.Complete the sequence. </p>
-                    <img src="aq9.png">
+                    <img src="{{url_for('static', filename='img/proff/aq9.png')}}">
                     <label><input type="radio" name="q9" value="a"> a) A</label>
                     <label><input type="radio" name="q9" value="b"> b) B</label>
                     <label><input type="radio" name="q9" value="c"> c) C</label>
@@ -145,7 +145,7 @@
                 </li>
                 <li>
                     <p>10.Which shape comes next in the sequence? </p>
-                    <img src="aq10.png">
+                    <img src="{{url_for('static', filename='img/proff/aq10.png')}}">
                     <label><input type="radio" name="q10" value="a"> a) A</label>
                     <label><input type="radio" name="q10" value="b"> b) B</label>
                     <label><input type="radio" name="q10" value="c"> c) C</label>
@@ -154,8 +154,8 @@
                 </li>
                 <li>
                     <p>11. Choose the correct three figures to complete the sequence: </p>
-                    <img src="aq11.png">
-                    <img src="aq11o.png">
+                    <img src="{{url_for('static', filename='img/proff/aq11.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/aq11o.png')}}">
                     <label><input type="radio" name="q11" value="a"> a) A</label>
                     <label><input type="radio" name="q11" value="b"> b) B</label>
                     <label><input type="radio" name="q11" value="c"> c) C</label>
@@ -164,7 +164,7 @@
                 </li>
                 <li>
                     <p>12. Choose the odd one out: </p>
-                    <img src="aq12.png">
+                    <img src="{{url_for('static', filename='img/proff/aq12.png')}}">
 
                     <label><input type="radio" name="q12" value="a"> a) A</label>
                     <label><input type="radio" name="q12" value="b"> b) B</label>
@@ -174,7 +174,7 @@
                 </li>
                 <li>
                     <p>13. If </p>
-                    <img src="aq13.png">
+                    <img src="{{url_for('static', filename='img/proff/aq13.png')}}">
 
                     <label><input type="radio" name="q13" value="a"> a) A</label>
                     <label><input type="radio" name="q13" value="b"> b) B</label>
@@ -184,7 +184,7 @@
                 </li>
                 <li>
                     <p>14. If </p>
-                    <img src="aq14.png">
+                    <img src="{{url_for('static', filename='img/proff/aq14.png')}}">
 
                     <label><input type="radio" name="q14" value="a"> a) A</label>
                     <label><input type="radio" name="q14" value="b"> b) B</label>
@@ -194,7 +194,7 @@
                 </li>
                 <li>
                     <p>15. Complete the sequence. </p>
-                    <img src="aq15.png">
+                    <img src="{{url_for('static', filename='img/proff/aq15.png')}}">
 
                     <label><input type="radio" name="q15" value="a"> a) A</label>
                     <label><input type="radio" name="q15" value="b"> b) B</label>
@@ -204,7 +204,7 @@
                 </li>
                 <li>
                     <p>16. Which figure is the odd one out? </p>
-                    <img src="aq16.png">
+                    <img src="{{url_for('static', filename='img/proff/aq16.png')}}">
 
                     <label><input type="radio" name="q16" value="a"> a) A</label>
                     <label><input type="radio" name="q16" value="b"> b) B</label>
@@ -214,7 +214,7 @@
                 </li>
                 <li>
                     <p>17. Which figure is the odd one out? </p>
-                    <img src="aq17.png">
+                    <img src="{{url_for('static', filename='img/proff/aq17.png')}}">
 
                     <label><input type="radio" name="q17" value="a"> a) A</label>
                     <label><input type="radio" name="q17" value="b"> b) B</label>
@@ -224,7 +224,7 @@
                 </li>
                 <li>
                     <p>18. Which figure completes the grid?</p>
-                    <img src="aq18.png">
+                    <img src="{{url_for('static', filename='img/proff/aq18.png')}}">
 
                     <label><input type="radio" name="q18" value="a"> a) A</label>
                     <label><input type="radio" name="q18" value="b"> b) B</label>
@@ -234,7 +234,7 @@
                 </li>
                 <li>
                     <p>19. Which figure completes the grid? </p>
-                    <img src="aq19.png">
+                    <img src="{{url_for('static', filename='img/proff/aq19.png')}}">
 
                     <label><input type="radio" name="q19" value="a"> a) A</label>
                     <label><input type="radio" name="q19" value="b"> b) B</label>
@@ -244,7 +244,7 @@
                 </li>
                 <li>
                     <p>20. Which figure is next in the series? </p>
-                    <img src="aq20.png">
+                    <img src="{{url_for('static', filename='img/proff/aq20.png')}}">
 
                     <label><input type="radio" name="q20" value="a"> a) A</label>
                     <label><input type="radio" name="q20" value="b"> b) B</label>
@@ -254,7 +254,7 @@
                 </li>
                 <li>
                     <p>21. Which of the boxes comes next in the sequence? </p>
-                    <img src="aq21.png">
+                    <img src="{{url_for('static', filename='img/proff/aq21.png')}}">
 
                     <label><input type="radio" name="q21" value="a"> a) A</label>
                     <label><input type="radio" name="q21" value="b"> b) B</label>
@@ -264,7 +264,7 @@
                 </li>
                 <li>
                     <p>22. Which shape follows in the sequence? </p>
-                    <img src="aq22.png">
+                    <img src="{{url_for('static', filename='img/proff/aq22.png')}}">
 
                     <label><input type="radio" name="q22" value="a"> a) A</label>
                     <label><input type="radio" name="q22" value="b"> b) B</label>
@@ -274,7 +274,7 @@
                 </li>
                 <li>
                     <p>23. Which box follows the sequence? </p>
-                    <img src="aq23.png">
+                    <img src="{{url_for('static', filename='img/proff/aq23.png')}}">
 
                     <label><input type="radio" name="q23" value="a"> a) A</label>
                     <label><input type="radio" name="q23" value="b"> b) B</label>
@@ -284,7 +284,7 @@
                 </li>
                 <li>
                     <p>24. Which figure completes the sequence?</p>
-                    <img src="aq24.png">
+                    <img src="{{url_for('static', filename='img/proff/aq24.png')}}">
 
                     <label><input type="radio" name="q24" value="a"> a) A</label>
                     <label><input type="radio" name="q24" value="b"> b) B</label>
@@ -294,7 +294,7 @@
                 </li>
                 <li>
                     <p>25. Which figure completes the sequence? </p>
-                    <img src="aq25.png">
+                    <img src="{{url_for('static', filename='img/proff/aq25.png')}}">
 
                     <label><input type="radio" name="q25" value="a"> a) A</label>
                     <label><input type="radio" name="q25" value="b"> b) B</label>
@@ -302,8 +302,8 @@
                     <label><input type="radio" name="q25" value="d"> d) D</label>
 
                 </li>
-                <li>26. Which figure belongs in neither group? </p>
-                    <img src="aq26.png">
+                <li><p>26. Which figure belongs in neither group? </p>
+                    <img src="{{url_for('static', filename='img/proff/aq26.png')}}">
 
                     <label><input type="radio" name="q26" value="a"> a) A</label>
                     <label><input type="radio" name="q26" value="b"> b) B</label>
@@ -313,8 +313,8 @@
                 </li>
                 <li>
                     <p>27. Which figure completes the sequence? </p>
-                    <img src="aq27.png">
-                    <img src="aq27o.png">
+                    <img src="{{url_for('static', filename='img/proff/aq27.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/aq27o.png')}}">
 
                     <label><input type="radio" name="q27" value="a"> a) A</label>
                     <label><input type="radio" name="q27" value="b"> b) B</label>
@@ -324,8 +324,8 @@
                 </li>
                 <li>
                     <p>28. Which figure completes the sequence? </p>
-                    <img src="aq28.png">
-                    <img src="aq28o.png">
+                    <img src="{{url_for('static', filename='img/proff/aq28.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/aq28o.png')}}">
 
                     <label><input type="radio" name="q28" value="a"> a) A</label>
                     <label><input type="radio" name="q28" value="b"> b) B</label>
@@ -335,8 +335,8 @@
                 </li>
                 <li>
                     <p>29. Complete the sequence. </p>
-                    <img src="aq29.png">
-                    <img src="aq29o.png">
+                    <img src="{{url_for('static', filename='img/proff/aq29.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/aq29o.png')}}">
 
 
                     <label><input type="radio" name="q29" value="a"> a) A</label>
@@ -347,8 +347,8 @@
                 </li>
                 <li>
                     <p>30. Complete the sequence. </p>
-                    <img src="aq30.png">
-                    <img src="aq30o.png">
+                    <img src="{{url_for('static', filename='img/proff/aq30.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/aq30o.png')}}">
 
                     <label><input type="radio" name="q30" value="a"> a) A</label>
                     <label><input type="radio" name="q30" value="b"> b) B</label>
@@ -421,6 +421,13 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
         document.getElementById("submit").addEventListener('click', function(e){
             // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -439,6 +446,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -455,7 +465,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-           
+            displayCorrectAnswers();
         })
 
         function displayPieChart(correct, incorrect, unattended) {
@@ -480,7 +490,7 @@ function startTimer() {
     timerInterval = setInterval(updateTimer, 1000);
 }
 function home(){
-            window.location.href='proof.html';
+            window.location.href='/higher';
 
         }
 
