--- a/templates/Highschool/proff/mech.html
+++ b/templates/Highschool/proff/mech.html
@@ -67,7 +67,7 @@
                 <li>
                     <p>1.<b>A system of cogwheels is shown in the diagram below:</b> </p>
                        <p> An external force turns the cogwheel on the extreme left in the given direction (counter clockwise). Which cogwheel will turn faster, the first one (I) or the second one (II)?</p>
-                    <img src="m1.png">
+                    <img src="{{url_for('static', filename='img/proff/m1.png')}}">
                     <label><input type="radio" name="q1" value="a"> a) Cogwheel 1</label>
                     <label><input type="radio" name="q1" value="b"> b) Cogwheel 2</label>
                     <label><input type="radio" name="q1" value="c"> c) Both cogwheels will turn at the same speed</label>
@@ -75,7 +75,7 @@
                 </li>
                 <li>
                     <p>2.Two identical triangles are placed inside a water tank as shown in the diagram below. The triangles are fixed in position. On which triangle will a greater force be exerted?</p>
-                    <img src="m2.png">
+                    <img src="{{url_for('static', filename='img/proff/m2.png')}}">
                     <label><input type="radio" name="q2" value="a"> a) 1</label>
                     <label><input type="radio" name="q2" value="b"> b) 2</label>
                     <label><input type="radio" name="q2" value="c"> c) Equal on both</label>
@@ -86,7 +86,7 @@
                     <p>3. The diagram shows two fixed cogwheels which can only rotate around their own axis. A rack is inserted between the two cogwheels and is moved in the direction shown by the arrow.
                         What are the directions of movement and velocities of the cogwheels?
                         </p>
-                    <img src="m3.png">
+                    <img src="{{url_for('static', filename='img/proff/m3.png')}}">
                     <label><input type="radio" name="q3" value="a"> a) Same direction, same velocities</label>
                     <label><input type="radio" name="q3" value="b"> b) Same direction, different velocities</label>
                     <label><input type="radio" name="q3" value="c"> c) Different directions, same velocities</label>
@@ -94,14 +94,14 @@
                 </li>
                 <li>
                     <p>4. Cogwheel number 1 rotates counter clockwise as shown.Choose option </p>
-                    <img src="m4.png">
+                    <img src="{{url_for('static', filename='img/proff/m4.png')}}">
                     <label><input type="radio" name="q4" value="a"> a) If the red cogwheel rotates in the direction of the arrow </label>
                     <label><input type="radio" name="q4" value="b"> b) if it rotates in the opposite direction</label>
                     <label><input type="radio" name="q4" value="c"> c) if the red cogwheel does not move at all </label>
                 </li>
                 <li>
                     <p>5. What colour car should you avoid if you don't want it to overheat quickly on a sunny day?</p>
-                    <img src="m5.png">
+                    <img src="{{url_for('static', filename='img/proff/m5.png')}}">
                     <label><input type="radio" name="q5" value="a"> a) A</label>
                     <label><input type="radio" name="q5" value="b"> b) B</label>
                     <label><input type="radio" name="q5" value="c"> c) C</label>
@@ -109,7 +109,7 @@
                 </li>
                 <li>
                     <p>6.Which way is the wagon accelerating? (If either, mark C.)</p>
-                    <img src="m6.png">
+                    <img src="{{url_for('static', filename='img/proff/m6.png')}}">
                     <label><input type="radio" name="q6" value="a"> a) A</label>
                     <label><input type="radio" name="q6" value="b"> b) B</label>
                     <label><input type="radio" name="q6" value="c"> c) C</label>
@@ -117,7 +117,7 @@
                 </li>
                 <li>
                     <p>7.Which pendulum will swing faster? (If equal, mark C.)</p>
-                    <img src="m7.png">
+                    <img src="{{url_for('static', filename='img/proff/m7.png')}}">
                     <label><input type="radio" name="q7" value="a"> a) A</label>
                     <label><input type="radio" name="q7" value="b"> b) B</label>
                     <label><input type="radio" name="q7" value="c"> c) C</label>
@@ -125,7 +125,7 @@
                 </li>
                 <li>
                     <p>8.Which granary can hold more wheat? (If equal, mark C.). </p>
-                    <img src="m8.png">
+                    <img src="{{url_for('static', filename='img/proff/m8.png')}}">
                     <label><input type="radio" name="q8" value="a"> a) A</label>
                     <label><input type="radio" name="q8" value="b"> b) B</label>
                     <label><input type="radio" name="q8" value="c"> b) C</label>
@@ -133,7 +133,7 @@
                 </li>
                 <li>
                     <p>9.In which direction does the grey wheel turn? (If neither, mark C.). </p>
-                    <img src="m9.png">
+                    <img src="{{url_for('static', filename='img/proff/m9.png')}}">
                     <label><input type="radio" name="q9" value="a"> a) A</label>
                     <label><input type="radio" name="q9" value="b"> b) B</label>
                     <label><input type="radio" name="q9" value="c"> c) C</label>
@@ -141,7 +141,7 @@
                 </li>
                 <li>
                     <p>10.In which direction should the acrobat move his body to balance the seesaw? (If neither, Mark C.) </p>
-                    <img src="m10.png">
+                    <img src="{{url_for('static', filename='img/proff/m10.png')}}">
                     <label><input type="radio" name="q10" value="a"> a) A</label>
                     <label><input type="radio" name="q10" value="b"> b) B</label>
                     <label><input type="radio" name="q10" value="c"> c) C</label>
@@ -149,7 +149,7 @@
                 </li>
                 <li>
                     <p>11. Which bird will find it easier to fly? (If equal, mark C.) </p>
-                    <img src="m11.png">
+                    <img src="{{url_for('static', filename='img/proff/m11.png')}}">
                     
                     <label><input type="radio" name="q11" value="a"> a) A</label>
                     <label><input type="radio" name="q11" value="b"> b) B</label>
@@ -158,7 +158,7 @@
                 </li>
                 <li>
                     <p>12. Who will need to apply more force to lift the weight? (If equal, Mark C.) </p>
-                    <img src="m12.png">
+                    <img src="{{url_for('static', filename='img/proff/m12.png')}}">
 
                     <label><input type="radio" name="q12" value="a"> a) A</label>
                     <label><input type="radio" name="q12" value="b"> b) B</label>
@@ -167,7 +167,7 @@
                 </li>
                 <li>
                     <p>13. Which ball will reach the floor first? (If equal, Mark C.) </p>
-                    <img src="m13.png">
+                    <img src="{{url_for('static', filename='img/proff/m13.png')}}">
 
                     <label><input type="radio" name="q13" value="a"> a) A</label>
                     <label><input type="radio" name="q13" value="b"> b) B</label>
@@ -176,7 +176,7 @@
                 </li>
                 <li>
                     <p>14. If gear 1 and gear 5 turn clockwise, as shown by the arrows, gear 3 will:</p>
-                    <img src="m14.png">
+                    <img src="{{url_for('static', filename='img/proff/m14.png')}}">
 
                     <label><input type="radio" name="q14" value="a"> a) Turn anticlockwise</label>
                     <label><input type="radio" name="q14" value="b"> b) Turn either to and fro</label>
@@ -186,7 +186,7 @@
                 </li>
                 <li>
                     <p>15. Which person must pull harder to lift the weight? (If no difference, mark C.) </p>
-                    <img src="m15.png">
+                    <img src="{{url_for('static', filename='img/proff/m15.png')}}">
 
                     <label><input type="radio" name="q15" value="a"> a) A</label>
                     <label><input type="radio" name="q15" value="b"> b) B</label>
@@ -195,7 +195,7 @@
                 </li>
                 <li>
                     <p>16. When the left-hand gear turns in the direction shown, which way does the right-hand one turn? (If either, mark C.) </p>
-                    <img src="m16.png">
+                    <img src="{{url_for('static', filename='img/proff/m16.png')}}">
 
                     <label><input type="radio" name="q16" value="a"> a) A</label>
                     <label><input type="radio" name="q16" value="b"> b) B</label>
@@ -204,7 +204,7 @@
                 </li>
                 <li>
                     <p>17. Which measure is marked properly? </p>
-                    <img src="m17.png">
+                    <img src="{{url_for('static', filename='img/proff/m17.png')}}">
 
                     <label><input type="radio" name="q17" value="a"> a) A</label>
                     <label><input type="radio" name="q17" value="b"> b) B</label>
@@ -214,7 +214,7 @@
                 </li>
                 <li>
                     <p>18. Which shaft will turn most quickly?</p>
-                    <img src="m18.png">
+                    <img src="{{url_for('static', filename='img/proff/m18.png')}}">
 
                     <label><input type="radio" name="q18" value="a"> a) A</label>
                     <label><input type="radio" name="q18" value="b"> b) B</label>
@@ -224,7 +224,7 @@
                 </li>
                 <li>
                     <p>19. In which picture will the scales read lower (less weight)?    (If equal mark C.) </p>
-                    <img src="m19.png">
+                    <img src="{{url_for('static', filename='img/proff/m19.png')}}">
 
                     <label><input type="radio" name="q19" value="a"> a) A</label>
                     <label><input type="radio" name="q19" value="b"> b) B</label>
@@ -234,7 +234,7 @@
                 </li>
                 <li>
                     <p>20. Where should a chain be attached to hold up the sign?   (If either, mark C.) </p>
-                    <img src="m20.png">
+                    <img src="{{url_for('static', filename='img/proff/m20.png')}}">
 
                     <label><input type="radio" name="q20" value="a"> a) A</label>
                     <label><input type="radio" name="q20" value="b"> b) B</label>
@@ -244,7 +244,7 @@
                 </li>
                 <li>
                     <p>21. Which system will let the most water run out? </p>
-                    <img src="m21.png">
+                    <img src="{{url_for('static', filename='img/proff/m21.png')}}">
 
                     <label><input type="radio" name="q21" value="a"> a) A</label>
                     <label><input type="radio" name="q21" value="b"> b) B</label>
@@ -253,7 +253,7 @@
                 </li>
                 <li>
                     <p>22. A front engine car gently rolls down this slope. In what position will the car end up in?? </p>
-                    <img src="m22.png">
+                    <img src="{{url_for('static', filename='img/proff/m22.png')}}">
 
                     <label><input type="radio" name="q22" value="a"> a) A</label>
                     <label><input type="radio" name="q22" value="b"> b) B</label>
@@ -264,7 +264,7 @@
                 <li>
                     <p>23. Four weights are dropped from a height of 10 meters at the same time, which one
                         will hit the ground last?</p>
-                    <img src="m23.png">
+                    <img src="{{url_for('static', filename='img/proff/m23.png')}}">
 
                     <label><input type="radio" name="q23" value="a"> a) 5kg</label>
                     <label><input type="radio" name="q23" value="b"> b) 10kg</label>
@@ -274,7 +274,7 @@
                 </li>
                 <p><br><br><b>Cogs A, B and C are linked together by 2 separate belts.
                     Cog B is half the size of cog A and cog C </b></p>
-                    <img src="m2425.png">
+                    <img src="{{url_for('static', filename='img/proff/m2425.png')}}">
                 <li>
                     <p>24. If we turn cog A one complete revolution cog B will</p>
              
@@ -295,8 +295,8 @@
                     
 
                 </li>
-                <li>26. If these 4 objects are fired horizontally from a cannon, which will fly furthest? </p>
-                    <img src="m26.png">
+                <li>26.<p> If these 4 objects are fired horizontally from a cannon, which will fly furthest? </p>
+                    <img src="{{url_for('static', filename='img/proff/m26.png')}}">
 
                     <label><input type="radio" name="q26" value="a"> a) A</label>
                     <label><input type="radio" name="q26" value="b"> b) B</label>
@@ -306,7 +306,7 @@
                 </li>
                 <li>
                     <p>27. Assuming the two balls are falling from the same height, which will hit the ground first? </p>
-                    <img src="m27.png">
+                    <img src="{{url_for('static', filename='img/proff/m27.png')}}">
                     
 
                     <label><input type="radio" name="q27" value="a"> a) Ball 1</label>
@@ -317,7 +317,7 @@
                 </li>
                 <li>
                     <p>28. Which wheels are turning counter-clockwise? </p>
-                    <img src="m28.png">
+                    <img src="{{url_for('static', filename='img/proff/m28.png')}}">
                    
                     <label><input type="radio" name="q28" value="a"> a) C & E</label>
                     <label><input type="radio" name="q28" value="b"> b) F & D</label>
@@ -327,7 +327,7 @@
                 </li>
                 <li>
                     <p>29. Which ball is the heaviest? </p>
-                    <img src="m29.png">
+                    <img src="{{url_for('static', filename='img/proff/m29.png')}}">
                   
 
 
@@ -411,6 +411,13 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
         document.getElementById("submit").addEventListener('click', function(e){
             // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -429,6 +436,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -445,7 +455,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-           
+            displayCorrectAnswers();
         })
 
         function displayPieChart(correct, incorrect, unattended) {
@@ -483,7 +493,7 @@ function updateTimer() {
     }
 }
 function home(){
-            window.location.href='proof.html';
+            window.location.href='/higher';
 
         }
 function sendResults(){
@@ -523,17 +533,7 @@ function sendResults(){
         updateTimer();
 
 }
-// window.onbeforeunload = function () {
-//         return 'Your progress will be lost';
-//     };
 
-//     // Handle the case when the user chooses to leave the page
-//     window.addEventListener('unload', function () {
-//         // Call sendResults() function when user leaves the page
-//         sendResults();
-//     });
-
-// Start the timer when the page loads
 startTimer();
     </script>
 </body>
