--- a/templates/Highschool/Hss/mech12.html
+++ b/templates/Highschool/Hss/mech12.html
@@ -67,7 +67,7 @@
                 <li>
                     <p>1.A wooden block is pushed upwards by applying force as shown in figures A, B and C. In which figure, the force needed to be applied would be
                         maximum?</p>
-                    <img src="tm1.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm1.png') }}">
                     <label><input type="radio" name="q1" value="a"> a) Figure A</label>
                     <label><input type="radio" name="q1" value="b"> b) Figure B</label>
                     <label><input type="radio" name="q1" value="c"> c) Figure C</label>
@@ -76,7 +76,7 @@
                 <li>
                     <p>2.In the given figure which one of the buckets will
                         get filled first?</p>
-                    <img src="tm2.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm2.png') }}">
                     <label><input type="radio" name="q2" value="a"> a) Bucket A</label>
                     <label><input type="radio" name="q2" value="b"> b) Bucket B</label>
                     <label><input type="radio" name="q2" value="c"> c) Bucket C</label>
@@ -86,7 +86,7 @@
                 <li>
                     <p>3. A motorcycle, a car and a truck are moving with equal momentum. Which one has the greatest kinetic energy?
                         </p>
-                    <img src="tm3.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm3.png') }}">
                     <label><input type="radio" name="q3" value="a"> a) Motorcycle</label>
                     <label><input type="radio" name="q3" value="b"> b) Car</label>
                     <label><input type="radio" name="q3" value="c"> c) Truck</label>
@@ -94,7 +94,7 @@
                 </li>
                 <li>
                     <p>4. The handles on doors A, B and C are placed in different positions as shown. Using the handle, which door would be closed by applying minimum force? </p>
-                    <img src="tm4.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm4.png') }}">
                     <label><input type="radio" name="q4" value="a"> a) Door A </label>
                     <label><input type="radio" name="q4" value="b"> b) Door B</label>
                     <label><input type="radio" name="q4" value="c"> c) Door C </label>
@@ -104,7 +104,7 @@
                     <p>5. 
                         Three balls A, B and C of same mass are dropped together in vacuum from a height of 6 meters. Which ball would reach first on the floor?
                         </p>
-                    <img src="tm5.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm5.png') }}">
                     <label><input type="radio" name="q5" value="a"> a) Ball A</label>
                     <label><input type="radio" name="q5" value="b"> b) Ball B</label>
                     <label><input type="radio" name="q5" value="c"> c) Ball C</label>
@@ -112,7 +112,7 @@
                 </li>
                 <li>
                     <p>6.In which one of the given figures, the force required to cut the wire will be minimum if force is applied at X?</p>
-                    <img src="tm6.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm6.png') }}">
                     <label><input type="radio" name="q6" value="a"> a) Figure A </label>
                     <label><input type="radio" name="q6" value="b"> b) Figure B</label>
                     <label><input type="radio" name="q6" value="c"> c) Figure C</label>
@@ -121,7 +121,7 @@
                 </li>
                 <li>
                     <p>7. Which of the given containers shows the heaviest object?</p>
-                    <img src="tm7.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm7.png') }}">
                     <label><input type="radio" name="q7" value="a"> a) Container A</label>
                     <label><input type="radio" name="q7" value="b"> b) Container B</label>
                     <label><input type="radio" name="q7" value="c"> c) Container C</label>
@@ -130,7 +130,7 @@
                 </li>
                 <li>
                     <p>8.Three cells of 1.5V each are connected in four different ways as shown. Which arrangement will give 4.5V between points X and Y?. </p>
-                    <img src="tm8.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm8.png') }}">
                     <label><input type="radio" name="q8" value="a"> a) Figure A</label>
                     <label><input type="radio" name="q8" value="b"> b) Figure B</label>
                     <label><input type="radio" name="q8" value="c"> c) Figure C</label>
@@ -139,7 +139,7 @@
                 </li>
                 <li>
                     <p>9.Which direction should the screw shown in the figure be turned in order to tighten it into place? </p>
-                    <img src="tm9.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm9.png') }}">
                     <label><input type="radio" name="q9" value="a"> a) Clockwise</label>
                     <label><input type="radio" name="q9" value="b"> b) Anti-clockwise</label>
                     <label><input type="radio" name="q9" value="c"> c) Either clockwise or anti-clockwise</label>
@@ -149,7 +149,7 @@
                 </li>
                 <li>
                     <p>10.Three persons in the figures are turning around a solid ball tied to a rope and making same number of rotations per second. If suddenly the rope is released, which one ball fall at the maximum distance? </p>
-                    <img src="tm25.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm25.png') }}">
                     <label><input type="radio" name="q10" value="a"> a) Ball of Person A</label>
                     <label><input type="radio" name="q10" value="b"> b) Ball of Person B</label>
                     <label><input type="radio" name="q10" value="c"> c) Ball of Person C</label>
@@ -158,7 +158,7 @@
                 </li>
                 <li>
                     <p>11. Two balls A and B, with different sizes but same density are rolling with the same speed and are moving towards each other to collide. What would happen to ball A after the collision? </p>
-                    <img src="tm10.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm10.png') }}">
                     
                     <label><input type="radio" name="q11" value="a"> a) Ball A will stop</label>
                     <label><input type="radio" name="q11" value="b"> b) Ball A will jump over the smaller ball B </label>
@@ -168,7 +168,7 @@
                 </li>
                 <li>
                     <p>12. A man is lifting a mass of 5 kg. In which of the given figures, does he apply the minimum force?</p>
-                    <img src="tm11.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm11.png') }}">
 
                     <label><input type="radio" name="q12" value="a"> a) Figure A</label>
                     <label><input type="radio" name="q12" value="b"> b) Figure B</label>
@@ -178,7 +178,7 @@
                 </li>
                 <li>
                     <p>13. In which of the given pictures, will the ladder be least stable or most likely to slip? </p>
-                    <img src="tm26.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm26.png') }}">
 
                     <label><input type="radio" name="q13" value="a"> a) Picture A</label>
                     <label><input type="radio" name="q13" value="b"> b) Picture B</label>
@@ -188,7 +188,7 @@
                 </li>
                 <li>
                     <p>14. Three wheels A, B and C cover the same distance in same time. Which wheel rotates the fastest?</p>
-                    <img src="tm12.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm12.png') }}">
 
                     <label><input type="radio" name="q14" value="a"> a) Wheel A</label>
                     <label><input type="radio" name="q14" value="b"> b) Wheel B</label>
@@ -198,7 +198,7 @@
                 </li>
                 <li>
                     <p>15. In which of the given situations, the force F needed to lift a bucket of water is the least? </p>
-                    <img src="tm13.png">
+                    <img src="{{ url_for('static', filename='img/Hss/tm13.png') }}">
 
                     <label><input type="radio" name="q15" value="a"> a) Situation A</label>
                     <label><input type="radio" name="q15" value="b"> b) Situation B</label>
@@ -208,7 +208,7 @@
                 </li>
                 <li>
                     <p>16. When the left-hand gear turns in the direction shown, which way does the right-hand one turn? (If either, mark C.) </p>
-                    <img src="m16.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m16.png') }}">
 
                     <label><input type="radio" name="q16" value="a"> a) A</label>
                     <label><input type="radio" name="q16" value="b"> b) B</label>
@@ -217,7 +217,7 @@
                 </li>
                 <li>
                     <p>17. Which measure is marked properly? </p>
-                    <img src="m17.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m17.png') }}">
 
                     <label><input type="radio" name="q17" value="a"> a) A</label>
                     <label><input type="radio" name="q17" value="b"> b) B</label>
@@ -227,7 +227,7 @@
                 </li>
                 <li>
                     <p>18. Which shaft will turn most quickly?</p>
-                    <img src="m18.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m18.png') }}">
 
                     <label><input type="radio" name="q18" value="a"> a) A</label>
                     <label><input type="radio" name="q18" value="b"> b) B</label>
@@ -238,7 +238,7 @@
                 </li>
                 <li>
                     <p>19. In which picture will the scales read lower (less weight)?    (If equal mark C.) </p>
-                    <img src="m19.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m19.png') }}">
 
                     <label><input type="radio" name="q19" value="a"> a) A</label>
                     <label><input type="radio" name="q19" value="b"> b) B</label>
@@ -248,7 +248,7 @@
                 </li>
                 <li>
                     <p>20. Where should a chain be attached to hold up the sign?   (If either, mark C.) </p>
-                    <img src="m20.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m20.png') }}">
 
                     <label><input type="radio" name="q20" value="a"> a) A</label>
                     <label><input type="radio" name="q20" value="b"> b) B</label>
@@ -258,7 +258,7 @@
                 </li>
                 <li>
                     <p>21. Which system will let the most water run out? </p>
-                    <img src="m21.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m21.png') }}">
 
                     <label><input type="radio" name="q21" value="a"> a) A</label>
                     <label><input type="radio" name="q21" value="b"> b) B</label>
@@ -268,7 +268,7 @@
                 </li>
                 <li>
                     <p>22. A front engine car gently rolls down this slope. In what position will the car end up in?? </p>
-                    <img src="m22.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m22.png') }}">
 
                     <label><input type="radio" name="q22" value="a"> a) A</label>
                     <label><input type="radio" name="q22" value="b"> b) B</label>
@@ -279,7 +279,7 @@
                 <li>
                     <p>23. Four weights are dropped from a height of 10 meters at the same time, which one
                         will hit the ground last?</p>
-                    <img src="m23.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m23.png') }}">
 
                     <label><input type="radio" name="q23" value="a"> a) 5kg</label>
                     <label><input type="radio" name="q23" value="b"> b) 10kg</label>
@@ -289,7 +289,7 @@
                 </li>
                 <p><br><br><b>Cogs A, B and C are linked together by 2 separate belts.
                     Cog B is half the size of cog A and cog C </b></p>
-                    <img src="m2425.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m2425.png') }}">
                 <li>
                     <p>24. If we turn cog A one complete revolution cog B will</p>
              
@@ -310,8 +310,8 @@
                     
 
                 </li>
-                <li>26. If these 4 objects are fired horizontally from a cannon, which will fly furthest? </p>
-                    <img src="m26.png">
+                <li><p>26. If these 4 objects are fired horizontally from a cannon, which will fly furthest? </p>
+                    <img src="{{ url_for('static', filename='img/Hss/m26.png') }}">
 
                     <label><input type="radio" name="q26" value="a"> a) A</label>
                     <label><input type="radio" name="q26" value="b"> b) B</label>
@@ -321,7 +321,7 @@
                 </li>
                 <li>
                     <p>27. Assuming the two balls are falling from the same height, which will hit the ground first? </p>
-                    <img src="m27.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m27.png') }}">
                     
 
                     <label><input type="radio" name="q27" value="a"> a) Ball 1</label>
@@ -332,7 +332,7 @@
                 </li>
                 <li>
                     <p>28. Which wheels are turning counter-clockwise? </p>
-                    <img src="m28.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m28.png') }}">
                    
                     <label><input type="radio" name="q28" value="a"> a) C & E</label>
                     <label><input type="radio" name="q28" value="b"> b) F & D</label>
@@ -342,7 +342,7 @@
                 </li>
                 <li>
                     <p>29. Which ball is the heaviest? </p>
-                    <img src="m29.png">
+                    <img src="{{ url_for('static', filename='img/Hss/m29.png') }}">
                   
 
 
@@ -432,6 +432,13 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
         document.getElementById("submit").addEventListener('click', function(e){
             // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -450,6 +457,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -466,7 +476,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-            
+            displayCorrectAnswers();
         })
 
         function displayPieChart(correct, incorrect, unattended) {
