--- a/templates/Highschool/Hss/twelth.html
+++ b/templates/Highschool/Hss/twelth.html
@@ -23,6 +23,15 @@
         section {
             padding: 20px;
         }
+         /* Style for the home link */
+         #homeLink {
+            position: absolute; /* Position absolute for precise placement */
+            top: 10px; /* Adjust top distance */
+            right: 10px; /* Adjust right distance */
+            color: #ffffff; /* Home link color */
+            text-decoration: none;
+            font-weight: bold;
+        }
 
         a {
             color: #5b5e60; /* Link color */
@@ -38,7 +47,8 @@
 <body>
 
     <header>
-        <h1>Welcome <span id='Name'></span>  To Twelth Aptitude Test</h1>
+        <h1>Welcome <span id="Name"></span>  To Twelth Aptitude Test</h1>
+        <a href="/aptitude" id="homeLink">Home</a>
     </header>
 
     <section>
@@ -57,402 +67,15 @@
         <h2>Quick Links</h2>
         <ul>
             <li><a href="/quantitativeH" id="linkt1">Quanitative Test</a></li>
-            <li><a href="/abstractH "id="linkt2"> Abstract Test</a></li>
+            <li><a href="/abstractH" id="linkt2"> Abstract Test</a></li>
             <li><a href="/verbalH" id="linkt3">Verbal Test</a></li>
             <li><a href="/spatialH" id="linkt4">Spatial Test</a></li>
             <li><a href="/mechanicalH" id="linkt5">Mechanical Test</a></li>
             <li><a href="/perceptualH" id="linkt6">Perceptual Test</a></li>
             <li><a href="/languageH" id="linkt7">Language Test</a></li>
         </ul>
-      <!--   <h2>Marks</h2>
-        <div>Quanitative <span id='Qua'></span></div>
-        <div>Abstract <span id='Abs'></span></div>
-        <div>Verbal <span id='Ver'></span></div>
-        <div>Spatial <span id='Spa'></span></div>
-        <div>Mechanical <span id='Mec'></span></div>
-        <div>Perceptual <span id='Per'></span></div>
-        <div>Language <span id='Lan'></span></div>
-        <input type="submit" value="submit" class="sub" id="submit"> -->
+
     </section>
-    <script type="module">
-         let l1 = false;
-        let l2 = false;
-        let l3 = false;
-       let l4 = false;
-let l5 = false;
-let l6 = false;
-let l7 = false;
-let status=false;
-        
-       const name=localStorage.getItem('Name');
-       document.getElementById('Name').textContent=name;
-       const NA=localStorage.getItem('NA');
-       document.getElementById('Qua').textContent=NA;
-       const AR=localStorage.getItem('AR');
-       document.getElementById('Abs').textContent=AR;
-       const VR=localStorage.getItem('VR');
-       document.getElementById('Ver').textContent=VR;
-       const SA=localStorage.getItem('SA');
-       document.getElementById('Spa').textContent=SA;
-       const MR=localStorage.getItem('MR');
-       document.getElementById('Mec').textContent=MR;
-       const PA=localStorage.getItem('PA');
-       document.getElementById('Per').textContent=PA;
-       const LA=localStorage.getItem('LA');
-       document.getElementById('Lan').textContent=LA;
-    
    
-        // Import the functions you need from the SDKs you need
-     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js";
-     import { getDatabase, ref,remove, set, get,update, child } from "https://www.gstatic.com/firebasejs/10.7.2/firebase-database.js";
-
-// Your web app's Firebase configuration
-const firebaseConfig = {
-   apiKey: "AIzaSyB--Ygc5-wJBBgNfsvsMwPkuhBbYnVfrRk",
-   authDomain: "aptitude-e4149.firebaseapp.com",
-   projectId: "aptitude-e4149",
-   storageBucket: "aptitude-e4149.appspot.com",
-   messagingSenderId: "947837210200",
-   appId: "1:947837210200:web:555c24f75f73c10da0442d"
- };
-
-// Initialize Firebase
-     const app = initializeApp(firebaseConfig);
-
-//get ref to database services
-      const db = getDatabase(app);
-      const dbRef = ref(db);
-    let NU=0;
-    let Ai=0;
-    let Vi=0;
-    let Si=0;
-    let Mi=0;
-    let Pi=0;
-    let Li=0;
-                
-       const num= localStorage.getItem('NA');
-      if(num!=null){
-       NU = parseInt(num, 10);}
-      const mar= localStorage.getItem('AR');
-      if(mar!=null){
-       Ai = parseInt(mar, 10);}
-      const Vur=localStorage.getItem('VR');
-      if(Vur!=null){
-       Vi=parseInt(Vur, 10);}
-      const sp=localStorage.getItem('SA');
-      if(sp!=null){
-       Si=parseInt(sp, 10);}
-      const mec=localStorage.getItem('MR');
-      if(mec!=null){
-       Mi=parseInt(mec, 10);}
-
-      const per=localStorage.getItem('PA');
-      if(per!=null){
-       Pi=parseInt(per, 10);}
-      const lan=localStorage.getItem('LA');
-      if(lan!=null){
-       Li=parseInt(lan,10);}
-      let Nl=0;
-      let Vl=0;
-      let Al=0;
-      let Pl=0;
-      let Ll=0;
-      let Sl=0;
-      let Ml=0;
-      let markValues = {
-        NA: NU,
-         AR: Ai,
-         VR: Vi,
-         SA: Si,
-         MR: Mi,
-         PA: Pi,
-         LA: Li
-                };
-                
-
-                
-                if (NU || Vi || Si || Mi || Pi || Li || Ai !=0) {
-                    set(ref(db, 'temp/' +  localStorage.getItem('user-id')),
-       {
-
-         Name:name,
-         NA: NU,
-         AR: Ai,
-         VR: Vi,
-         SA: Si,
-         MR: Mi,
-         PA: Pi,
-         LA: Li
-         
-         
-        
-
-       });
-}
-      
-
-     
-       get(child(dbRef,'temp/' +  localStorage.getItem('user-id'))).then((snapshot) => {
-       
-        if(snapshot.exists()){
-            Al = snapshot.val().AR,
-                    Ll = snapshot.val().LA,
-                    Ml = snapshot.val().MR,
-                    Nl= snapshot.val().NA,
-                    Pl= snapshot.val().PA,
-                    Sl = snapshot.val().SA,
-                    Vl = snapshot.val().VR
-          
-
-            
-
-
-
-        }
-
-       }) .then ( ()=>{
-        alert("Your previous progress is added");
-        if(Nl!=0){
-            localStorage.setItem('NA',Nl);
-            localStorage.setItem('linkw1',true);
-            document.getElementById('Qua').textContent=Nl;
-            var clickedLink = document.getElementById('linkw1');
-          clickedLink.style.pointerEvents = 'none';  
-          clickedLink.style.textDecoration = 'none'; 
-          clickedLink.style.color = 'gray';  
-           l1='true'; 
-            
-
-        }
-        if(Al!=0){
-            localStorage.setItem('AR',Al);
-            localStorage.setItem('linkw2',true);
-            document.getElementById('Abs').textContent=Al;
-            var clickedLink1 = document.getElementById('linkw2');
-          clickedLink1.style.pointerEvents = 'none';  
-          clickedLink1.style.textDecoration = 'none'; 
-          clickedLink1.style.color = 'gray';  
-           l2='true';
-
-        }
-        if(Ll!=0){
-            localStorage.setItem('LA',Ll);
-            localStorage.setItem('linkw7',true);
-            document.getElementById('Lan').textContent=Ll;
-             
-          var clickedLink6 = document.getElementById('linkw7');
-          clickedLink6.style.pointerEvents = 'none';  
-          clickedLink6.style.textDecoration = 'none'; 
-          clickedLink6.style.color = 'gray';     
-           l7='true';
-
-
-        }
-        if(Ml!=0){
-            localStorage.setItem('MR',Ml);
-            localStorage.setItem('linkw5',true);
-            document.getElementById('Mec').textContent=Ml;
-            var clickedLink4 = document.getElementById('linkw5');
-          clickedLink4.style.pointerEvents = 'none';  
-          clickedLink4.style.textDecoration = 'none';
-          clickedLink4.style.color = 'gray';     
-           l5='true';
-
-
-        }
-        if(Pl!=0){
-            localStorage.setItem('PA',Pl);
-            localStorage.setItem('linkw6',true);
-            document.getElementById('Per').textContent=Pl;
-            var clickedLink5 = document.getElementById('linkw6');
-          clickedLink5.style.pointerEvents = 'none';  
-          clickedLink5.style.textDecoration = 'none'; 
-          clickedLink5.style.color = 'gray';    
-           l6='true';
-
-
-        }
-        if(Sl!=0){
-            localStorage.setItem('SA',Sl);
-            localStorage.setItem('linkw4',true);
-            document.getElementById('Spa').textContent=Sl;
-            var clickedLink3 = document.getElementById('linkw4');
-          clickedLink3.style.pointerEvents = 'none';  
-          clickedLink3.style.textDecoration = 'none'; 
-          clickedLink3.style.color = 'gray';   
-           l4='true'; 
-
-
-        }
-        if(Vl!=0){
-            localStorage.setItem('VR',Vl);
-            localStorage.setItem('linkw3',true);
-            document.getElementById('Ver').textContent=Vl;
-            var clickedLink2 = document.getElementById('linkw3');
-          clickedLink2.style.pointerEvents = 'none';  
-          clickedLink2.style.textDecoration = 'none'; 
-          clickedLink2.style.color = 'gray';     
-           l3='true';
-
-
-        }
-
-
-
-              })
-      
-       
-      
-      
-       
-      
-
-      document.getElementById("submit").addEventListener('click', function(e){
-       e.preventDefault();
-       const name=localStorage.getItem('Name');
-       const num= localStorage.getItem('NA');
-      
-      const NU = parseInt(num, 10);
-      const mar= localStorage.getItem('AR');
-      
-      const AR = parseInt(mar, 10);
-      const Vur=localStorage.getItem('VR');
-      const VR=parseInt(Vur, 10);
-      const sp=localStorage.getItem('SA');
-      const SA=parseInt(sp, 10);
-      const mec=localStorage.getItem('MR');
-      const MR=parseInt(mec, 10);
-      const per=localStorage.getItem('PA');
-      const PA=parseInt(per, 10);
-      const lan=localStorage.getItem('LA');
-      const LA=parseInt(lan,10);
-      const markValues = {
-        NA: NU,
-         AR: AR,
-         VR: VR,
-         SA: SA,
-         MR: MR,
-         PA: PA,
-         LA: LA
-                };
-      
-      update(ref(db, 'users/' +  localStorage.getItem('user-id')),
-       {
-
-         Status: status,
-         Marks: markValues
-        
-
-
-    //    }).then ( ()=>{
-
-    //    set(ref(db, 'Marks/' + localStorage.getItem('Roll')),
-    //    {
-
-    //      Name: localStorage.getItem('Name'),
-    //      NA: NU,
-    //      AR: AR,
-    //      VR: VR,
-    //      SA: SA,
-    //      MR: MR,
-    //      PA: PA,
-    //      LA: LA
-
-
-    //    })
-    }).then ( ()=>{
-
-
-remove(child(dbRef,'temp/' +  localStorage.getItem('user-id')))
-
-
-window.location.href = '../results.html';
-
-              })
-.catch ((error) =>{
-alert("Unsuccessful");
-console. log(error);
-
-})
-// }).catch ((error) =>{
-// alert("Unsuccessful");
-// console. log(error);
-
- 
-
-
-
-      });
-      if(localStorage.getItem('linkw1')=="true"){
-          
-          var clickedLink = document.getElementById('linkw1');
-          clickedLink.style.pointerEvents = 'none';  
-          clickedLink.style.textDecoration = 'none'; 
-          clickedLink.style.color = 'gray';  
-           l1='true';       
-   }
-   if(localStorage.getItem('linkw2')=="true"){
-          
-          var clickedLink1 = document.getElementById('linkw2');
-          clickedLink1.style.pointerEvents = 'none';  
-          clickedLink1.style.textDecoration = 'none'; 
-          clickedLink1.style.color = 'gray';  
-           l2='true';       
-   }
-   if(localStorage.getItem('linkw3')=="true"){
-          
-          var clickedLink2 = document.getElementById('linkw3');
-          clickedLink2.style.pointerEvents = 'none';  
-          clickedLink2.style.textDecoration = 'none'; 
-          clickedLink2.style.color = 'gray';     
-           l3='true';     
-   }
-   if(localStorage.getItem('linkw4')=="true"){
-          
-          var clickedLink3 = document.getElementById('linkw4');
-          clickedLink3.style.pointerEvents = 'none';  
-          clickedLink3.style.textDecoration = 'none'; 
-          clickedLink3.style.color = 'gray';   
-           l4='true';     
-   }
-   if(localStorage.getItem('linkw5')=="true"){
-          
-          var clickedLink4 = document.getElementById('linkw5');
-          clickedLink4.style.pointerEvents = 'none';  
-          clickedLink4.style.textDecoration = 'none';
-          clickedLink4.style.color = 'gray';     
-           l5='true';     
-   }
-   if(localStorage.getItem('linkw6')=="true"){
-          
-          var clickedLink5 = document.getElementById('linkw6');
-          clickedLink5.style.pointerEvents = 'none';  
-          clickedLink5.style.textDecoration = 'none'; 
-          clickedLink5.style.color = 'gray';    
-           l6='true';    
-   }
-   if(localStorage.getItem('linkw7')=="true"){
-         
-          var clickedLink6 = document.getElementById('linkw7');
-          clickedLink6.style.pointerEvents = 'none';  
-          clickedLink6.style.textDecoration = 'none'; 
-          clickedLink6.style.color = 'gray';     
-           l7='true';     
-   }
-   if (l1 && l2 && l3 && l4 && l5 && l6 && l7 === 'true') {
-  var clickedLink7 = document.getElementById('submit');
-  clickedLink7.disabled = false;
-  clickedLink7.style.display = 'block';
-  status=true;
-}
-else{
-  var clickedLink7 = document.getElementById('submit');
-  clickedLink7.disabled = true;
-  clickedLink7.style.display = 'none';
-
-}
-
-      </script>
-
 </body>
 </html>
