--- a/templates/Highschool/Hss/verb12.html
+++ b/templates/Highschool/Hss/verb12.html
@@ -223,7 +223,7 @@
                 <br>
 
                 <li>
-                    <P>____________is to Country as Governor is to ____________</P>
+                    <p>____________is to Country as Governor is to ____________</p>
 
                     <label><input type="radio" name="q20" value="a"> a) President --------- State</label>
                     <label><input type="radio" name="q20" value="b"> b) Flag --------- Nation</label>
@@ -370,6 +370,13 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
         document.getElementById("submit").addEventListener('click', function(e){
             // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -388,6 +395,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -404,7 +414,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-        
+            displayCorrectAnswers();
         
     })
 
