--- a/templates/Highschool/proff/lang.html
+++ b/templates/Highschool/proff/lang.html
@@ -345,6 +345,13 @@
             function getCorrectAnswer(questionNumber) {
                 return answers['q' + questionNumber];
             }
+            function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
             document.getElementById("submit").addEventListener('click', function(e){
                 // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -363,6 +370,9 @@
                         if (userAnswer === correctAnswer) {
                             correctAnswers++;
                         }
+                        else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                     } else {
                         // If no option is selected, question is unattended
                         unattendedQuestions++;
@@ -379,7 +389,7 @@
 
                 // Display pie chart
                 displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-           
+                displayCorrectAnswers();
             })
 
             function displayPieChart(correct, incorrect, unattended) {
@@ -417,7 +427,7 @@ function updateTimer() {
     }
 }
 function home(){
-            window.location.href='proof.html';
+            window.location.href='/higher';
 
         }
 function sendResults(){
