--- a/templates/Highschool/proff/quant.html
+++ b/templates/Highschool/proff/quant.html
@@ -268,7 +268,7 @@
                     <p>25. The pie chart given below shows the production of 6 different factories. The total production
                         of all these 6 factories is 1400. The production of a particular factory is shown as a percent
                         of total production of all these 6 factories.</p>
-                    <img src="n5.PNG">
+                    <img src="{{url_for('static', filename='img/proff/n5.PNG')}}">
                     <p>Which of the following statement correct?
                         <br>I. The central angle formed by sectors A and C together is 156.6°.<br>
                         II. The central angle formed by sector B, D and together F is 180°.
@@ -324,7 +324,7 @@
                 </li>
                 <li>
                     <p>27.Study the given graph and answer the question that follows.</p>
-                    <img src="n7.PNG">
+                    <img src="{{url_for('static', filename='img/proff/n7.PNG')}}">
                     <p>The expenditure on Interest on Loans is by what percentage more than the expenditure on Taxes ?
                     </p>
                     <label><input type="radio" name="q27" value="a"> a) 30% </label>
@@ -336,7 +336,7 @@
                     <p>28.The line graph shows the production (in tonnes) and the sales (in tonnes) of a
                         company.<br><br>What percentage (approximately) of the total production of the company is the
                         total sales of the company in all the years together? (correct to 2 decimal places)</p>
-                    <img src="n8.PNG">
+                    <img src="{{url_for('static', filename='img/proff/n8.PNG')}}">
                     <label><input type="radio" name="q28" value="a"> a) 78.44</label>
                     <label><input type="radio" name="q28" value="b"> b) 72.55 </label>
                     <label><input type="radio" name="q28" value="c"> c) 68.12 </label>
@@ -420,8 +420,15 @@
             return answers['q' + questionNumber];
         }
         function home(){
-            window.location.href='proof.html';
+            window.location.href='/higher';
 
+        }
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
         }
 
         document.getElementById("submit").addEventListener('click', function(e){
@@ -441,6 +448,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -457,7 +467,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-          
+            displayCorrectAnswers();
         })
 
         function displayPieChart(correct, incorrect, unattended) {
@@ -531,16 +541,7 @@ function sendResults(){
         updateTimer();
 
 }
-// window.onbeforeunload = function () {
-//         return 'Your progress will be lost';
-//     };
 
-//     // Handle the case when the user chooses to leave the page
-//     window.addEventListener('unload', function () {
-//         // Call sendResults() function when user leaves the page
-//         sendResults();
-//     });
-// Start the timer when the page loads
 startTimer();
     </script>
 </body>
