--- a/templates/Highschool/proff/spat.html
+++ b/templates/Highschool/proff/spat.html
@@ -66,7 +66,7 @@
             <ol>
                 <li>
                     <p>1. Which of the given shape is the correct mirror image?</p>
-                    <img src="q1.png">
+                    <img src="{{url_for('static', filename='img/proff/q1.png')}}">
                     <label><input type="radio" name="q1" value="a"> a) A</label>
                     <label><input type="radio" name="q1" value="b"> b) B</label>
                     <label><input type="radio" name="q1" value="c"> c) C</label>
@@ -74,7 +74,7 @@
                 </li>
                 <li>
                     <p>2. What would be the top view of this 3D shape?</p>
-                    <img src="q2.png">
+                    <img src="{{url_for('static', filename='img/proff/q2.png')}}">
                     <label><input type="radio" name="q2" value="a"> a) A</label>
                     <label><input type="radio" name="q2" value="b"> b) B</label>
                     <label><input type="radio" name="q2" value="c"> c) C</label>
@@ -83,7 +83,7 @@
 
                 <li>
                     <p>3. Which of the following is the same 3D shape but in different position?</p>
-                    <img src="q3.png">
+                    <img src="{{url_for('static', filename='img/proff/q3.png')}}">
                     <label><input type="radio" name="q3" value="a"> a) A</label>
                     <label><input type="radio" name="q3" value="b"> b) B</label>
                     <label><input type="radio" name="q3" value="c"> c) C</label>
@@ -91,7 +91,7 @@
                 </li>
                 <li>
                     <p>4. Which of the given shapes is the rotation of the main image?</p>
-                    <img src="q4.png">
+                    <img src="{{url_for('static', filename='img/proff/q4.png')}}">
                     <label><input type="radio" name="q4" value="a"> a) A</label>
                     <label><input type="radio" name="q4" value="b"> b) B</label>
                     <label><input type="radio" name="q4" value="c"> c) C</label>
@@ -99,7 +99,7 @@
                 </li>
                 <li>
                     <p>5. Which of the given shapes is the rotation of the main image?</p>
-                    <img src="q5.png">
+                    <img src="{{url_for('static', filename='img/proff/q5.png')}}">
                     <label><input type="radio" name="q5" value="a"> a) A</label>
                     <label><input type="radio" name="q5" value="b"> b) B</label>
                     <label><input type="radio" name="q5" value="c"> c) C</label>
@@ -107,7 +107,7 @@
                 </li>
                 <li>
                     <p>6.If the net was folded into a cube, which of the given shapes would it look like?</p>
-                    <img src="q6.png">
+                    <img src="{{url_for('static', filename='img/proff/q6.png')}}">
                     <label><input type="radio" name="q6" value="a"> a) A</label>
                     <label><input type="radio" name="q6" value="b"> b) B</label>
                     <label><input type="radio" name="q6" value="c"> c) C</label>
@@ -115,7 +115,7 @@
                 </li>
                 <li>
                     <p>7.If the net was folded into a cube, which of the given shapes would it look like?</p>
-                    <img src="q7.png">
+                    <img src="{{url_for('static', filename='img/proff/q7.png')}}">
                     <label><input type="radio" name="q7" value="a"> a) A</label>
                     <label><input type="radio" name="q7" value="b"> b) B</label>
                     <label><input type="radio" name="q7" value="c"> c) C</label>
@@ -123,7 +123,7 @@
                 </li>
                 <li>
                     <p>8.When folded up, this pattern creates which cube? </p>
-                    <img src="q8.png">
+                    <img src="{{url_for('static', filename='img/proff/q8.png')}}">
                     <label><input type="radio" name="q8" value="a"> a) A</label>
                     <label><input type="radio" name="q8" value="b"> b) B</label>
                     <label><input type="radio" name="q8" value="c"> c) C</label>
@@ -131,7 +131,7 @@
                 </li>
                 <li>
                     <p>9.How many blocks are in this tower? </p>
-                    <img src="q9.png">
+                    <img src="{{url_for('static', filename='img/proff/q9.png')}}">
                     <label><input type="radio" name="q9" value="a"> a) 55</label>
                     <label><input type="radio" name="q9" value="b"> b) 26</label>
                     <label><input type="radio" name="q9" value="c"> c) 25</label>
@@ -140,7 +140,7 @@
                 <li>
                     <p>10.When all shapes on top are connected in the corresponding edges (z to z, y to y, etc.), the
                         complete shape looks like what shape? </p>
-                    <img src="q10.png">
+                    <img src="{{url_for('static', filename='img/proff/q10.png')}}">
                     <label><input type="radio" name="q10" value="a"> a) A</label>
                     <label><input type="radio" name="q10" value="b"> b) B</label>
                     <label><input type="radio" name="q10" value="c"> c) C</label>
@@ -152,7 +152,7 @@
                         <br><br> Note that a side marked X has to touch X and a side marked Y has to touch Y.
                         <br><br> Choose the correct answer.
                     </p>
-                    <img src="a11.png">
+                    <img src="{{url_for('static', filename='img/proff/a11.png')}}">
 
                     <label><input type="radio" name="q11" value="a"> a) A</label>
                     <label><input type="radio" name="q11" value="b"> b) B</label>
@@ -162,8 +162,8 @@
                 </li>
                 <li>
                     <p>12.Which of the four possible options represents the cube in its folded form? </p>
-                    <img src="a12.png">
-                    <img src="a12o.png">
+                    <img src="{{url_for('static', filename='img/proff/a12.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/a12o.png')}}">
 
                     <label><input type="radio" name="q12" value="a"> a) A</label>
                     <label><input type="radio" name="q12" value="b"> b) B</label>
@@ -177,7 +177,7 @@
                         <br> <br>Note that a side marked X has to touch X and a side marked Y has to touch Y.
                         <br><br> Choose the correct answer.
                     </p>
-                    <img src="a13.png">
+                    <img src="{{url_for('static', filename='img/proff/a13.png')}}">
 
                     <label><input type="radio" name="q13" value="a"> a) A</label>
                     <label><input type="radio" name="q13" value="b"> b) B</label>
@@ -191,8 +191,8 @@
                         <br><br> Note that a side marked A has to touch A and so forth.
                         <br><br> Choose the correct answer.
                     </p>
-                    <img src="a14.png">
-                    <img src="a14o.png">
+                    <img src="{{url_for('static', filename='img/proff/a14.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/a14o.png')}}">
 
                     <label><input type="radio" name="q14" value="a"> a) A</label>
                     <label><input type="radio" name="q14" value="b"> b) B</label>
@@ -202,8 +202,8 @@
                 </li>
                 <li>
                     <p>15. Out of the following 5 images, select the one depicting the same object shown above. </p>
-                    <img src="a15.png">
-                    <img src="a15o.png">
+                    <img src="{{url_for('static', filename='img/proff/a15.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/a15o.png')}}">
 
                     <label><input type="radio" name="q15" value="a"> a) A</label>
                     <label><input type="radio" name="q15" value="b"> b) B</label>
@@ -213,7 +213,7 @@
                 </li>
                 <li>
                     <p>16. Which of the four options represents the cube in its folded form? </p>
-                    <img src="a16.png">
+                    <img src="{{url_for('static', filename='img/proff/a16.png')}}">
 
                     <label><input type="radio" name="q16" value="a"> a) A</label>
                     <label><input type="radio" name="q16" value="b"> b) B</label>
@@ -224,7 +224,7 @@
                 <li>
                     <p>17. Which of the shadows on the right can result from casting light on one of the 3D-shape’s
                         sides?…? </p>
-                    <img src="a17.png">
+                    <img src="{{url_for('static', filename='img/proff/a17.png')}}">
 
                     <label><input type="radio" name="q17" value="a"> a) A</label>
                     <label><input type="radio" name="q17" value="b"> b) B</label>
@@ -236,7 +236,7 @@
                     <p>18. Below are two separate objects, each has a dot placed in one corner, and each has five
                         possible rotations. Choose the answer option in which the dots are placed in the same corners of
                         the objects as in the model.</p>
-                    <img src="a18.png">
+                    <img src="{{url_for('static', filename='img/proff/a18.png')}}">
 
                     <label><input type="radio" name="q18" value="a"> a) A</label>
                     <label><input type="radio" name="q18" value="b"> b) B</label>
@@ -252,8 +252,8 @@
                         <br><br>
                         Choose the correct answer.
                     </p>
-                    <img src="a19.png">
-                    <img src="a19o.png">
+                    <img src="{{url_for('static', filename='img/proff/a19.png')}}">
+                    <img src="{{url_for('static', filename='img/proff/a19o.png')}}">
 
                     <label><input type="radio" name="q19" value="a"> a) 1</label>
                     <label><input type="radio" name="q19" value="b"> b) 2</label>
@@ -264,7 +264,7 @@
                 </li>
                 <li>
                     <p>20. In which of the four options is this cube shown from a different perspective?</p>
-                    <img src="a20.png">
+                    <img src="{{url_for('static', filename='img/proff/a20.png')}}">
 
                     <label><input type="radio" name="q20" value="a"> a) A</label>
                     <label><input type="radio" name="q20" value="b"> b) B</label>
@@ -274,7 +274,7 @@
                 </li>
                 <li>
                     <p>21. Three views of the same cube are shown above. Which symbol is opposite the X? </p>
-                    <img src="a21.png">
+                    <img src="{{url_for('static', filename='img/proff/a21.png')}}">
 
                     <label><input type="radio" name="q21" value="a"> a) A</label>
                     <label><input type="radio" name="q21" value="b"> b) B</label>
@@ -284,7 +284,7 @@
                 </li>
                 <li>
                     <p>22. Which answer shows a mirror image of the image above? </p>
-                    <img src="a22.png">
+                    <img src="{{url_for('static', filename='img/proff/a22.png')}}">
 
                     <label><input type="radio" name="q22" value="a"> a) 1</label>
                     <label><input type="radio" name="q22" value="b"> b) 2</label>
@@ -294,7 +294,7 @@
                 </li>
                 <li>
                     <p>23. Which of the cubes shown could be made from the pattern? </p>
-                    <img src="a23.png">
+                    <img src="{{url_for('static', filename='img/proff/a23.png')}}">
 
                     <label><input type="radio" name="q23" value="a"> a) A</label>
                     <label><input type="radio" name="q23" value="b"> b) B</label>
@@ -304,7 +304,7 @@
                 </li>
                 <li>
                     <p>24. How many blocks make up the shape above?</p>
-                    <img src="a24.png">
+                    <img src="{{url_for('static', filename='img/proff/a24.png')}}">
 
                     <label><input type="radio" name="q24" value="a"> a) 28</label>
                     <label><input type="radio" name="q24" value="b"> b) 26</label>
@@ -314,7 +314,7 @@
                 </li>
                 <li>
                     <p>25.Which of the answer options is the correct net to make the cube? </p>
-                    <img src="a25.png">
+                    <img src="{{url_for('static', filename='img/proff/a25.png')}}">
 
                     <label><input type="radio" name="q25" value="a"> a) A</label>
                     <label><input type="radio" name="q25" value="b"> b) B</label>
@@ -322,10 +322,10 @@
                     <label><input type="radio" name="q25" value="d"> d) D</label>
 
                 </li>
-                <li>26. Each block in the pile is the same size and shape. Some blocks are hidden from view but must be
+                <li><p>26. Each block in the pile is the same size and shape. Some blocks are hidden from view but must be
                     there to hold the visible blocks up. Choose the answer that shows the total number of blocks in the
                     pile. </p>
-                    <img src="a26.png">
+                    <img src="{{url_for('static', filename='img/proff/a26.png')}}">
 
                     <label><input type="radio" name="q26" value="a"> a) 13</label>
                     <label><input type="radio" name="q26" value="b"> b) 10</label>
@@ -338,7 +338,7 @@
                     <p>27. Each block in the pile is the same size and shape. Some blocks are hidden from view but must
                         be there to hold the visible blocks up. Choose the answer that shows the total number of blocks
                         in the pile </p>
-                    <img src="a27.png">
+                    <img src="{{url_for('static', filename='img/proff/a27.png')}}">
 
 
                     <label><input type="radio" name="q27" value="a"> a) 16</label>
@@ -353,7 +353,7 @@
                         shape on the left, but it has been spun round. The other four shapes on the right do not match
                         the shape on the left because they have been picked up and turned over, as well as possibly spun
                         round. Choose the answer that shows the matching shape </p>
-                    <img src="a28.png">
+                    <img src="{{url_for('static', filename='img/proff/a28.png')}}">
 
 
                     <label><input type="radio" name="q28" value="a"> a) A</label>
@@ -367,7 +367,7 @@
                         shape on the left, but it has been spun round. The other four shapes on the right do not match
                         the shape on the left because they have been picked up and turned over, as well as possibly spun
                         round. Choose the answer that shows the matching shape </p>
-                    <img src="a29.png">
+                    <img src="{{url_for('static', filename='img/proff/a29.png')}}">
 
 
 
@@ -383,7 +383,7 @@
                         shape on the left, but it has been spun round. The other four shapes on the right do not match
                         the shape on the left because they have been picked up and turned over, as well as possibly spun
                         round. Choose the answer that shows the matching shape </p>
-                    <img src="a30.png">
+                    <img src="{{url_for('static', filename='img/proff/a30.png')}}">
 
 
                     <label><input type="radio" name="q30" value="a"> a) A</label>
@@ -453,6 +453,13 @@
         function getCorrectAnswer(questionNumber) {
             return answers['q' + questionNumber];
         }
+        function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
         document.getElementById("submit").addEventListener('click', function(e){
             // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -471,6 +478,9 @@
                     if (userAnswer === correctAnswer) {
                         correctAnswers++;
                     }
+                    else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                 } else {
                     // If no option is selected, question is unattended
                     unattendedQuestions++;
@@ -487,7 +497,7 @@
 
             // Display pie chart
             displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-          
+            displayCorrectAnswers();
         })
 
         function displayPieChart(correct, incorrect, unattended) {
@@ -562,17 +572,9 @@ function sendResults(){
         
 
 }
-// window.onbeforeunload = function () {
-//         return 'Your progress will be lost';
-//     };
 
-//     // Handle the case when the user chooses to leave the page
-//     window.addEventListener('unload', function () {
-//         // Call sendResults() function when user leaves the page
-//         sendResults();
-//     });
     function home(){
-            window.location.href='proof.html';
+            window.location.href='/higher';
 
         }
 // Start the timer when the page loads
