--- a/templates/Highschool/proff/verbal.html
+++ b/templates/Highschool/proff/verbal.html
@@ -373,6 +373,13 @@
             function getCorrectAnswer(questionNumber) {
                 return answers['q' + questionNumber];
             }
+            function displayCorrectAnswers() {
+            // Loop through each question
+            for (var i = 1; i <= Object.keys(answers).length; i++) {
+                var correctOption = document.querySelector('input[name="q' + i + '"][value="' + answers['q' + i] + '"]');
+                correctOption.parentNode.style.color = 'green'; // Highlight correct option
+            }
+        }
 
             document.getElementById("submit").addEventListener('click', function(e){
                 // Logic to calculate quiz results (count correct, incorrect, unattended)
@@ -391,6 +398,9 @@
                         if (userAnswer === correctAnswer) {
                             correctAnswers++;
                         }
+                        else {
+                        selectedOption.parentNode.style.color = 'red'; // Highlight incorrect option
+                    }
                     } else {
                         // If no option is selected, question is unattended
                         unattendedQuestions++;
@@ -407,7 +417,7 @@
 
                 // Display pie chart
                 displayPieChart(correctPercentage, incorrectPercentage, unattendedPercentage);
-              
+                displayCorrectAnswers();
             })
 
             function displayPieChart(correct, incorrect, unattended) {
@@ -445,7 +455,7 @@ function updateTimer() {
     }
 }
 function home(){
-            window.location.href='proof.html';
+            window.location.href='/higher';
 
         }
 function sendResults(){
@@ -485,17 +495,7 @@ function sendResults(){
         updateTimer();
 
 }
-// window.onbeforeunload = function () {
-//         return 'Your progress will be lost';
-//     };
 
-//     // Handle the case when the user chooses to leave the page
-//     window.addEventListener('unload', function () {
-//         // Call sendResults() function when user leaves the page
-//         sendResults();
-//     });
-
-// Start the timer when the page loads
 startTimer();
         </script>
 </body>
